--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": "https://sahoodman.github.io/jetcorp",
   "name": "firebase-react-auth",
   "version": "0.1.0",
-  "homepage": "http://sahoodman.github.io/firebase-react-auth", 
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
@@ -17,12 +17,12 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
