deploy the react app to github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sahoodman.github.io/jetcorp",
+  "homepage": "http://sahoodman.github.io/jetcorp",
   "name": "firebase-react-auth",
   "version": "0.1.0",
   "private": true,
